Fixed the path issue